	  (i.e. building parallel Solaris/Linux/HP-UX/etc). To do this,
	  make a new directory, and run configure from that directory, eg
	  mkdir obj-solaris; cd obj-solaris; ../modules/configure; make
	* removed configure *.in files from testsuite and added envvars to
	  allow running the testsuite from another directory
	* other fixes to testsuite
	* bug fix in cmdXResources regarding parsing the XRDB
	* removed probetcl from distribution; function moved to aclocal.m4
        * special shell chars in env vars are escaped rather than
	  quoted. This allows the use of single quotes inside the env var
	* noglob option turned on for module command in csh/tcsh
	* use customed temp file routine, rather than tmpnam or tempnam
	* minor bugs
	
Modules 3.1.6
Thu Jan  3 20:56:16 PST 2002		R.K. Owen (rk@owen.sj.ca.us)
	Contributors:
		Scott Gaskins		<sgaskins@us.ibm.com>
	 	Leo Butler		<lbutler@brocade.com>)
		Philip Kearns		<Philip.Kearns@tellabs.com>
		Andy Bruce		<abruce@infocruiser.com>
	* A 'break' in a modulefile will cause the modulefile to
	  not be added to $LOADEDMODULES, but will be considered
	  a successful execution to not affect other modulefiles
	  being loaded concurrently (Patch due to Scott Gaskins).
	* Tests and docs added for the above.
	* Added CYGWIN/Windows specific code (due to Andy Bruce)
	* Fixed problem with module load when the full path
	  is given (patch due to Scott Gaskins).
	* Added tests for the above problem.
	* Added the Modules-Paper in PDF format (thanks to Philip Kearns
	  and Leo Butler for raising the issue).
	* Modified probetcl to avoid using the -c option
	  (patch due to Philip Kearns).
	* Modified probetcl to use tclsh first then tcl
	* Added TCL_VERSION to configure and use it in the Makefile
	  to use the -ltcl@TCL_VERSION@ library.
	
Modules 3.1.5
Sat Aug 18 07:32:48 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	Contributors:
		Eric Stanley		<barnabas@knicknack.net>
	* Fixed up cmdPath to remove individual items from a path