@@ -1,24 +1,1 @@
-
-if [ "${MODULE_VERSION:-}" = "" ]; then
-	MODULE_VERSION_STACK="@VERSION@"
-	MODULE_VERSION="@VERSION@"
-	export MODULE_VERSION
-else
-	MODULE_VERSION_STACK="$MODULE_VERSION"
-fi
-export MODULE_VERSION_STACK
-
-module() { eval `@BASEPREFIX@$MODULE_VERSION/bin/modulecmd sh $*`; }
-
-MODULESHOME=@prefix@
-export MODULESHOME
-
-if [ "${LOADEDMODULES:-}" = "" ]; then
-  LOADEDMODULES=
-  export LOADEDMODULES
-fi
-
-if [ "${MODULEPATH:-}" = "" ]; then
-  MODULEPATH=`sed 's/#.*$//' ${MODULESHOME}/init/.modulespath | awk 'NF==1{printf("%s:",$1)}'`
-  export MODULEPATH
-fi
+eval `modulecmd sh bootstrap`
