@@ -18,6 +18,7 @@ Modules XXXXX
 	* removed configure *.in files from testsuite and added envvars to
 	  allow running the testsuite from another directory
 	* other fixes to testsuite
+	* added the 'bootstrap' initialization command
 	* bug fix in cmdXResources regarding parsing the XRDB
 	* removed probetcl from distribution; function moved to aclocal.m4
         * special shell chars in env vars are escaped rather than
